package ca.mcmaster.se2aa4.mazerunner.Factory;

public interface MazeExplorer {

    public void runs(Maze maze);
}
