@startuml ClassDiagram
package "ca.mcmaster.se2aa4.mazerunner" {
    enum Direction {
        UP
        DOWN
        LEFT
        RIGHT
    }

    class Node {
        Node root
        Node R
        Node L
        Node M
    }

    class Position {
        x: int
        y: int
        
    }

    class Path {
        
    }
    
    
    
    class Main{
        -load(args:String)
    }

    
    package "ca.mcmaster.se2aa4.mazerunner.MazeAlgorithms"{
        interface MazeSolver{
        +solve()
        }

        class RightHandSolver{

        }
        
        class TremauxSolver{

        }
        class MazeBFSSolver{

        } 

    } 
    package "ca.mcmaster.se2aa4.mazerunner.Factory" {
        interface MazeExplorer {
            +runs(): Maze
        }

        class Benchmarking {
        
        }   

        class PathCalculator {
        
        }

        class PathValidation{

        }

        class Maze {
        
        -start: Position
        -end: Position
        
        }

    }
}



Benchmarking ..|> MazeExplorer
PathCalculator ..|> MazeExplorer
PathValidation ..|> MazeExplorer

PathCalculator --> MazeSolver

TremauxSolver --> Path

Maze --> Position
Benchmarking --> MazeSolver

MazeBFSSolver ..|> MazeSolver
RightHandSolver ..|> MazeSolver
TremauxSolver ..|> MazeSolver

MazeExplorer *--> Maze

Main o--> Maze
Main o--> MazeExplorer
Main *--> Benchmarking
Main *--> PathCalculator
Main *--> PathValidation
Path <-- PathValidation

MazeBFSSolver o--> Maze
MazeBFSSolver --> Node
MazeBFSSolver --> Path
PathCalculator --> Path

MazeBFSSolver --> Position

Node o--> Position

Position *--> Direction

RightHandSolver *--> Path

RightHandSolver o--> Position


TremauxSolver o--> Position


@enduml